--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   intl: ^0.20.2
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
-
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
